<?xml version="1.0"?>
<package format="2">
  <name>pico_flexx_msgs</name>
  <version>0.0.0</version>
  <description>ROS driver for the pmd CamBoard pico flexx</description>

  <maintainer email="amaldo@cs.uni-bremen.de">Alexis Maldonado</maintainer>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/code-iai/pico_flexx_driver</url>

  <author email="wiedemeyer@cs.uni-bremen.de">Thiemo Wiedemeyer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>

</package>
